Fixed bug #30332 (zend.ze1_compatibility_mode isnt fully compatable with array_push())